[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Add src/ to the Python path so tests can import the package without install
pythonpath = ["src"]
# Discover tests in the tests/ directory
testpaths = ["tests"]
